@@ -1,8 +1,8 @@
 // -- This line is 78 characters long ----------------------------------------
-inherit "/std/state_monster";
+#include "../../macros.h"
+inherit MONSTER;
 
 #define WSAY(X) tell_room(environment(), line_break(X, "Lucien says: ", 78))
-#define LOGGER load_object("/players/wilhelm/simple_logger")
 
 void reset(int arg)
 {
@@ -34,8 +34,7 @@ void reset(int arg)
   add_response("ALL","SAY(%1,%2)","$said(%1,%2)");
   add_response("ALL","GOT(%1,%2)", "$handle_give(%1,%2)");
   
-  add_hook("die_hook", this_object());
-  add_hook("kill_hook", this_object());
+
 }
 said (who, word) {
   if (sscanf(lower_case(word),"%*shelp%*s") == 2) {
@@ -81,15 +80,9 @@ handle_give(what_name,  who_name) {
     destruct(what_obj);
 	this_player()->set_puzzle("wilhelm_merchant_key");
 	this_player() -> add_exp(1000);
-	LOGGER -> log("puzzle", "Merchant key", this_player());
+	//LOGGER -> log("puzzle", "Merchant key", this_player());
 	write("You feel a little more experienced.\n");
     return;
   }
 }
 
-die_hook(data, who) {
-  LOGGER -> log("kills", "killed Lucien", data[0]);
-}
-kill_hook(data, who) {
-  LOGGER -> log("deaths", "killed by Lucien", data[0]);
-}
