@@ -7,3 +7,4 @@
 2022-08-13  danny  gardener.c  added aliases for his name (keeper, etc)
 
 2023-11-22 giku created a new xplogger
+2023-11-23 giku added all monsters in siridfaath into the xplogger
